[gd_scene load_steps=7 format=3 uid="uid://b41rswdtvd10e"]

[ext_resource type="Script" path="res://Scripts/GameLoop.gd" id="1_a5ecp"]
[ext_resource type="PackedScene" uid="uid://833p2gpb3bdv" path="res://Scenes/TestScenes/RoomGeneration.tscn" id="1_q0fmw"]
[ext_resource type="PackedScene" uid="uid://csr0n2s24ehr6" path="res://Scenes/UserInterface.tscn" id="3_pv0yb"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerCamera.gd" id="4_cxvdw"]
[ext_resource type="AudioStream" uid="uid://b4yi0o5f878jr" path="res://Assets/Sound/Music/cyberpunk-music-277931.mp3" id="5_ywwyg"]
[ext_resource type="PackedScene" uid="uid://cwuxgblo0jje2" path="res://Scenes/UI/settings_menu.tscn" id="6_e1fsm"]

[node name="GameLoop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a5ecp")

[node name="HBoxContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="SubViewportContainer" type="SubViewportContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="HBoxContainer/SubViewportContainer" groups=["Viewports"]]
handle_input_locally = false
size = Vector2i(2, 2)
render_target_update_mode = 4

[node name="Camera2D" type="Camera2D" parent="HBoxContainer/SubViewportContainer/SubViewport"]
zoom = Vector2(4, 4)
script = ExtResource("4_cxvdw")

[node name="RoomGeneration" parent="HBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("1_q0fmw")]
position = Vector2(52, 43)

[node name="Enemies" type="Node" parent="HBoxContainer/SubViewportContainer/SubViewport"]

[node name="UserInterface" parent="HBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("3_pv0yb")]

[node name="Fade" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("5_ywwyg")
autoplay = true
bus = &"Music"

[node name="SettingsMenu" parent="." instance=ExtResource("6_e1fsm")]
visible = false
layout_mode = 1

[connection signal="level_generated" from="HBoxContainer/SubViewportContainer/SubViewport/RoomGeneration" to="." method="_on_level_generated"]
